--- a/index.html
+++ b/index.html
@@ -44,6 +44,8 @@
                     <div class="col-3"><input class="btn btn-warning w-100 py-3" type="button" value="-" onclick="btnClick(value)"></div>
                 </div>
             </form>
+            <br>
+        <footer style="background-color: black; text-align: center; color: white; padding: 5px;">&copy;2025 A simple work by Suhail P M</footer>
         </div>
     </div>
 
