--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 </div>
             </form>
             <br>
-        <footer style="background-color: black; text-align: center; color: white; padding: 5px;">&copy;2025 A simple work by Suhail P M</footer>
+        <footer style="background-color: black; border-radius:10px; text-align: center; color: white; padding: 5px;">&copy;2025 A simple work by Suhail P M</footer>
         </div>
     </div>
 
